fix: Ensure active nav links are properly styled in dark mode

--- a/assets/scss/_dark_mode.scss
+++ b/assets/scss/_dark_mode.scss
@@ -38,6 +38,12 @@ $text-color: bootstrap.$gray-400;
         border-bottom-color: rgba(255, 255, 255, 0.1);
         background: bootstrap.$gray-800;
 
+        .nav-link {
+            &:not(:hover).inactive {
+                color: bootstrap.$gray-500;
+            }
+        }
+
         .btn {
             color: $text-color;
             border-color: rgba(255, 255, 255, 0.1);
